<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <!--资讯类型入口-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/entrance_list"
        android:textStyle="bold"
        android:textSize="16dp"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#cccccc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCet4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/cet4_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_cet4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cet4_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCet6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/cet6_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_cet6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cet6_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llToefl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/toefl_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_toefl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toefl_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llIelts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ielts_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_ielts"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ielts_tv"
                android:textSize="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llSat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sat_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_sat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gre_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_gre"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gre_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGmat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/gmat_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_gmat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gmat_tv"
                android:textSize="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bec_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/ic_feeds_bec"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bec_tv"
                android:textSize="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/news_feeds"
        android:textStyle="bold"
        android:textSize="16dp"/>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#cccccc"/>

    <!--资讯列表-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>